# dedup

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/format-imports/: SKILL.md
src/: delete_duplicates.rs  files.rs  get_file_hash.rs  get_file_hashes.rs  inspect_directory.rs  locate_duplicates.rs  main.rs  print_duplicates.rs  process_duplicates.rs  sha256_filemap.rs  types.rs
