[package]
description = "Deduplicates image files in a directory"
edition = "2024"
license = "MIT"
name = "dedup"
repository = "https://github.com/dsw7/dedup"
version = "1.0.0"

[[bin]]
name = "dedup"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
clap = { version = "4.6.1", features = ["derive"] }
